[package]
name = "cadence-cli"
version = "0.1.5"
edition = "2024"

[[bin]]
name = "cadence"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
time = { version = "0.3", features = ["parsing", "formatting"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
serial_test = "3"
filetime = "0.2"
